Bug# 31284 rpl_ndb_blob fails on powermacg5

Long Blob v2 code exercised buffer overrun in old Api setValue() call.
Only detected on PowerMac G5 with Apple compiler.

setValue() buffer overrun fixed.

Various NDBAPI magic numbers de-mystified back to computed constant values